examples/test/testpolicy19417.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19417
  namespace: namespace494
spec:
  podSelector:
    matchLabels:
      key47: value41
      key0: value37
      key18: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value14
          key31: value33
      podSelector:
        matchLabels:
          key34: value11
          key6: value33
          key35: value9
